# Google-Photos

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  analyze_takeout.py  migrate_photos.py  pyproject.toml
.claude/: settings.local.json
degoogle_photos/: __init__.py  albums.py  cli.py  copy.py  dates.py  dedup.py  indexing.py  logging_util.py  report.py
google_photos_migrate/: cli.py  dedup.py  metadata.py  report.py
tests/: conftest.py  test_albums.py  test_copy.py  test_dates.py  test_dedup.py  test_dedup_mode.py  test_indexing.py  test_metadata.py  test_report.py
