[project]
name = "google-photos-migrate"
version = "1.0.0"
description = "Organize Google Takeout photos into YYYY/MM/ folders with dedup and reporting"
requires-python = ">=3.9"
dependencies = ["Pillow>=9.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
google-photos-migrate = "google_photos_migrate.cli:main"
